force-app/main/default/objects/Input__c/Input__c.object-meta.xml
<CustomObject>
    <label>Input</label>
    <nameField>
        <displayFormat>IN-{0000}</displayFormat>
        <label>Nombre de Sección</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inputs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>