force-app/main/default/objects/Input__c/fields/Maxlength__c.field-meta.xml
<CustomField>
    <fullName>Maxlength__c</fullName>
    <label>Maxlength</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>