force-app/main/default/objects/Input__c/fields/Readonly__c.field-meta.xml
<CustomField>
    <fullName>Readonly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Readonly</label>
    <type>Checkbox</type>
</CustomField>