force-app/main/default/objects/Input__c/fields/Seccion__c.field-meta.xml
<CustomField>
    <fullName>Seccion__c</fullName>
    <label>Sección</label>
    <referenceTo>Seccion__c</referenceTo>
    <relationshipLabel>Inputs</relationshipLabel>
    <relationshipName>Inputs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>