force-app/main/default/objects/Input__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>text</fullName>
            </value>
            <value>
                <fullName>password</fullName>
            </value>
            <value>
                <fullName>submit</fullName>
            </value>
            <value>
                <fullName>reset</fullName>
            </value>
            <value>
                <fullName>radio</fullName>
            </value>
            <value>
                <fullName>checkbox</fullName>
            </value>
            <value>
                <fullName>button</fullName>
            </value>
            <value>
                <fullName>color</fullName>
            </value>
            <value>
                <fullName>date</fullName>
            </value>
            <value>
                <fullName>datetime-local</fullName>
            </value>
            <value>
                <fullName>email</fullName>
            </value>
            <value>
                <fullName>month</fullName>
            </value>
            <value>
                <fullName>number</fullName>
            </value>
            <value>
                <fullName>range</fullName>
            </value>
            <value>
                <fullName>search</fullName>
            </value>
            <value>
                <fullName>tel</fullName>
            </value>
            <value>
                <fullName>time</fullName>
            </value>
            <value>
                <fullName>url</fullName>
            </value>
            <value>
                <fullName>week</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>